--- a/src/Products/MeetingLalouviere/locales/plone.pot
+++ b/src/Products/MeetingLalouviere/locales/plone.pot
@@ -59,6 +59,12 @@ msgstr ""
 msgid "backToProposedToServiceHead"
 msgstr ""
 
+msgid "proposeToDg"
+msgstr ""
+
+msgid "proposeToAlderman"
+msgstr ""
+
 msgid "setInCommittee"
 msgstr ""
 
