fix searchproposedtodirector translation

--- a/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
+++ b/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
@@ -566,6 +566,10 @@ msgstr ""
 msgid "searchproposedtodivisionhead"
 msgstr ""
 
+#. Default: "Items proposed to manager"
+msgid "searchproposedtodirector"
+msgstr ""
+
 #. Default: "Items proposed to ceo"
 msgid "searchproposedtodg"
 msgstr ""
